--- a/public/styles.css
+++ b/public/styles.css
@@ -25,6 +25,10 @@
   font-weight: 500;
 }
 
+button.downloadButton:hover{
+  background-color: #4285f4;
+}
+
 /* nav */
 nav {
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
